[metadata]
name = nested-attrs
version = 0.1.0
description = Just some small helpers for nested attributes
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    attr
    attrs
    nested
license = MIT
url = https://github.com/spenserblack/nested-attrs
project_urls =
    Bug Tracker = https://github.com/spenserblack/nested-attrs/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
